--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,6 +47,13 @@
   </div><!-- /#index -->
 </div><!-- /#main -->
 
+<footer role="contentinfo">
+  <div class="article-author-bottom">
+    {% include _author-bio.html %}
+  </div>
+  <p class="byline"><strong>{{ page.title }}</strong> was published on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>{% if page.modified %} and last modified on <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time>{% endif %}.</p>
+</footer>
+
 <div class="footer-wrap">
   <footer>
     {% include _footer.html %}
