--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -36,14 +36,13 @@
     <h1>{{ page.title }}</h1>
     <div class="article-wrap">
       {{ content }}
-
-    <footer role="contentinfo">
-      <div class="article-author-bottom">
-        {% include _author-bio.html %}
-      </div>
-      <p class="byline"><strong>{{ page.title }}</strong> was published on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>{% if page.modified %} and last modified on <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time>{% endif %}.</p>
-    </footer>
-
+      <hr />
+      <footer role="contentinfo">
+        <div class="article-author-bottom">
+          {% include _author-bio.html %}
+        </div>
+        <p class="byline"><strong>{{ page.title }}</strong> was published on <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</time>{% if page.modified %} and last modified on <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time>{% endif %} by <a href="{{ site.url }}/about" title="About {{ site.owner.name }}">{{ site.owner.name }}</a>.</p>
+      </footer>
       {% if page.share != false %}
         <hr />
         {% include _social-share.html %}
